@@ -4,6 +4,7 @@ use strict;
 use Carp;
 use IPC::Shareable;
 use Test::More;
+use Test::SharedFork;
 
 my $t  = 1;
 my $ok = 1;
@@ -21,32 +22,34 @@ if ($pid == 0) {
 
     sleep unless $awake;
 
-    tie $hv, 'IPC::Shareable', 'hash', { destroy => 0 };
-    tie $av, 'IPC::Shareable', 'arry', { destroy => 0 };
+    tie $hv, 'IPC::Shareable', 'hash1', { destroy => 0 };
+    tie $av, 'IPC::Shareable', 'arry1', { destroy => 0 };
 
-#    is $hv, 'baz', "child: HV is 'baz' ok";
-#    is $av, 'bong', "child: AV is 'bong' ok";
+    is $hv, 'baz', "child: HV is 'baz' ok";
+    is $av, 'bong', "child: AV is 'bong' ok";
 
     $hv = { };
     $av = [ ];
 
-    $hv->{blip}->{blarp} = 'blurp';
-    $hv->{flip}->{flop}  = 'flurp';
     $av->[1]->[2] = 'beep';
     $av->[2]->[3] = 'bang';
 
-#    is $hv->{blip}->{blarp}, 'blurp', "child: nested HV 1 is 'blurp' ok";
-#    is $hv->{flip}->{flop}, 'flurp', "child: nested HV 2 is 'flurp' ok";
+    is $av->[1]->[2], 'beep', "child: nested AV 1 has 'beep' ok";
+    is $av->[2]->[3], 'bang', "child: nested AV 2 has 'bang' ok";
 
-#    is $av->[1]->[2], 'beep', "child: nested AV 1 has 'beep' ok";
-#    is $av->[2]->[3], 'bang', "child: nested AV 2 has 'bang' ok";
+    $hv->{blip}->{blarp} = 'blurp';
+    $hv->{flip}->{flop}  = 'flurp';
+
+    is $hv->{blip}->{blarp}, 'blurp', "child: nested HV 1 is 'blurp' ok";
+    is $hv->{flip}->{flop}, 'flurp', "child: nested HV 2 is 'flurp' ok";
+
 
     exit;
 } else {
     # parent
 
-    tie $hv, 'IPC::Shareable', 'hash', { create => 'yes', destroy => 'yes' };
-    tie $av, 'IPC::Shareable', 'arry', { create => 'yes', destroy => 'yes' };
+    tie $hv, 'IPC::Shareable', 'hash1', { create => 1, destroy => 1 };
+    tie $av, 'IPC::Shareable', 'arry1', { create => 1, destroy => 1 };
 
     $hv = 'baz';
     $av = 'bong';
