@@ -6,8 +6,53 @@ use Test::More;
 
 use constant BYTES => 2000000; # ~2MB
 
+# limit
+{
+    my $size_ok_limit = eval {
+        tie my $var, 'IPC::Shareable', {
+            create  => 1,
+            size    => 2_000_000_000,
+            destroy => 1
+        };
+        1;
+    };
+
+    is $size_ok_limit, undef, "size larger than MAX croaks ok";
+    like $@, qr/larger than max size/, "...and error is sane";
+
+    if ($ENV{IPC_MEM}) {
+        my $size_ok_no_limit = eval {
+            tie my $var, 'IPC::Shareable', {
+                limit   => 0,
+                create  => 1,
+                size    => 2_000_000_000,
+                destroy => 1
+            };
+            1;
+        };
+
+        is $size_ok_no_limit, 1, "size larger than MAX succeeeds with limit=>0 ok";
+    }
+    else {
+        warn "IPC_MEM env var not set, skipped the big memory test\n";
+    }
+}
+
+{
+    my $size_ok = eval {
+        tie my $var, 'IPC::Shareable', {
+            limit   => 0,
+            size    => 999999999999,
+            destroy => 1
+        };
+        1;
+    };
+
+    is $size_ok, undef, "We croak if size is greater than max RAM";
+    like $@, qr/Cannot allocate memory/, "...and error is sane";
+}
+
 my $k = tie my $sv, 'IPC::Shareable', {
-    key => 'TEST',
     create => 1,
     destroy => 1,
     size => BYTES,
