@@ -6,6 +6,14 @@ Revision history for Perl extension IPC::Shareable.
     - Added ipcs()
     - Added test to ensure we croak if data size is greater than segment size
     - Added 'tidy' attribute, removes unneeded nested structure segments
+    - In SharedMem, added _key attribute, and added set/get methods
+    - Changed key generation from using padding, pack and unpack to using
+      String::CRC32's crc32(), which allows arbitrary, unpadded strings
+    - Added attributes() allows fetching one, or all of the object's atttributes
+    - Added 'limit' attribute, by setting false, allows a user to set a segment
+      size larger than our internal 1GB default
+    - Cleaned up exception throwing (particularly if seg size eats up all
+      memory, we throw an appropriate message)
 
 1.04    2021-06-28
     - Skip unspawn tests for perls with -Duselongdouble, as Storable is not
